ui: Don't mark UI accessibility names as translatable
Because I haven't been using translatable strings...

--- a/ui/addhardware.ui
+++ b/ui/addhardware.ui
@@ -173,7 +173,7 @@
                                     <signal name="changed" handler="on_storage_devtype_changed" swapped="no"/>
                                     <child internal-child="accessible">
                                       <object class="AtkObject" id="storage-devtype-atkobject">
-                                        <property name="AtkObject::accessible-name" translatable="yes">Device Type Field</property>
+                                        <property name="AtkObject::accessible-name">Device Type Field</property>
                                       </object>
                                     </child>
                                   </object>
@@ -418,7 +418,7 @@
                                         <property name="text" translatable="yes">aa:bb:cc:dd:ee:ff</property>
                                         <child internal-child="accessible">
                                           <object class="AtkObject" id="create-mac-address-atkobject">
-                                            <property name="AtkObject::accessible-name" translatable="yes">MAC Address Field</property>
+                                            <property name="AtkObject::accessible-name">MAC Address Field</property>
                                           </object>
                                         </child>
                                       </object>
