--- a/ui/addstorage.ui
+++ b/ui/addstorage.ui
@@ -190,7 +190,7 @@
                 </child>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="storage-browse-atkobject">
-                    <property name="AtkObject::accessible-name" translatable="yes">storage-browse</property>
+                    <property name="AtkObject::accessible-name">storage-browse</property>
                   </object>
                 </child>
               </object>
