--- a/ui/connect.ui
+++ b/ui/connect.ui
@@ -81,7 +81,7 @@
                 <signal name="changed" handler="on_hypervisor_changed" swapped="no"/>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="hypervisor-atkobject">
-                    <property name="AtkObject::accessible-name" translatable="yes">Hypervisor Select</property>
+                    <property name="AtkObject::accessible-name">Hypervisor Select</property>
                   </object>
                 </child>
               </object>
@@ -111,7 +111,7 @@
                 <signal name="changed" handler="on_transport_changed" swapped="no"/>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="transport-atkobject">
-                    <property name="AtkObject::accessible-name" translatable="yes">Connection Select</property>
+                    <property name="AtkObject::accessible-name">Connection Select</property>
                   </object>
                 </child>
               </object>
