--- a/ui/create.ui
+++ b/ui/create.ui
@@ -819,7 +819,7 @@ bar</property>
                                                     <signal name="clicked" handler="on_install_iso_browse_clicked" swapped="no"/>
                                                     <child internal-child="accessible">
                                                       <object class="AtkObject" id="install-iso-browse-atkobject">
-                                                        <property name="AtkObject::accessible-name" translatable="yes">install-iso-browse</property>
+                                                        <property name="AtkObject::accessible-name">install-iso-browse</property>
                                                       </object>
                                                     </child>
                                                   </object>
@@ -1147,7 +1147,7 @@ User shouldn't see this.</property>
                                                 <signal name="clicked" handler="on_install_import_browse_clicked" swapped="no"/>
                                                 <child internal-child="accessible">
                                                   <object class="AtkObject" id="install-import-browse-atkobject">
-                                                    <property name="AtkObject::accessible-name" translatable="yes">install-import-browse</property>
+                                                    <property name="AtkObject::accessible-name">install-import-browse</property>
                                                   </object>
                                                 </child>
                                               </object>
@@ -1288,7 +1288,7 @@ User shouldn't see this.</property>
                                                 <signal name="clicked" handler="on_kernel_browse_clicked" swapped="no"/>
                                                 <child internal-child="accessible">
                                                   <object class="AtkObject" id="kernel-browse-atkobject">
-                                                    <property name="AtkObject::accessible-name" translatable="yes">kernel-browse</property>
+                                                    <property name="AtkObject::accessible-name">kernel-browse</property>
                                                   </object>
                                                 </child>
                                               </object>
@@ -1307,7 +1307,7 @@ User shouldn't see this.</property>
                                                 <signal name="clicked" handler="on_initrd_browse_clicked" swapped="no"/>
                                                 <child internal-child="accessible">
                                                   <object class="AtkObject" id="initrd-browse-atkobject">
-                                                    <property name="AtkObject::accessible-name" translatable="yes">initrd-browse</property>
+                                                    <property name="AtkObject::accessible-name">initrd-browse</property>
                                                   </object>
                                                 </child>
                                               </object>
@@ -1326,7 +1326,7 @@ User shouldn't see this.</property>
                                                 <signal name="clicked" handler="on_dtb_browse_clicked" swapped="no"/>
                                                 <child internal-child="accessible">
                                                   <object class="AtkObject" id="dtb-browse-atkobject">
-                                                    <property name="AtkObject::accessible-name" translatable="yes">dtb-browse</property>
+                                                    <property name="AtkObject::accessible-name">dtb-browse</property>
                                                   </object>
                                                 </child>
                                               </object>
@@ -1483,7 +1483,7 @@ User shouldn't see this.</property>
                                             <signal name="clicked" handler="on_install_app_browse_clicked" swapped="no"/>
                                             <child internal-child="accessible">
                                               <object class="AtkObject" id="install-app-browse-atkobject">
-                                                <property name="AtkObject::accessible-name" translatable="yes">install-app-browse</property>
+                                                <property name="AtkObject::accessible-name">install-app-browse</property>
                                               </object>
                                             </child>
                                           </object>
@@ -1575,7 +1575,7 @@ User shouldn't see this.</property>
                                                 <signal name="clicked" handler="on_install_oscontainer_browse_clicked" swapped="no"/>
                                                 <child internal-child="accessible">
                                                   <object class="AtkObject" id="install-oscontainer-browse-atkobject">
-                                                    <property name="AtkObject::accessible-name" translatable="yes">install-oscontainer-browse</property>
+                                                    <property name="AtkObject::accessible-name">install-oscontainer-browse</property>
                                                   </object>
                                                 </child>
                                               </object>
@@ -1732,7 +1732,7 @@ is not yet supported.&lt;/small&gt;</property>
                                         <property name="xalign">0</property>
                                         <child internal-child="accessible">
                                           <object class="AtkObject" id="install-os-version-label-atkobject">
-                                            <property name="AtkObject::accessible-name" translatable="yes">install-os-version-label</property>
+                                            <property name="AtkObject::accessible-name">install-os-version-label</property>
                                           </object>
                                         </child>
                                       </object>
@@ -1752,7 +1752,7 @@ is not yet supported.&lt;/small&gt;</property>
                                         <property name="xalign">0</property>
                                         <child internal-child="accessible">
                                           <object class="AtkObject" id="install-os-type-label-atkobject">
-                                            <property name="AtkObject::accessible-name" translatable="yes">install-os-type-label</property>
+                                            <property name="AtkObject::accessible-name">install-os-type-label</property>
                                           </object>
                                         </child>
                                       </object>
@@ -1770,7 +1770,7 @@ is not yet supported.&lt;/small&gt;</property>
                                         <signal name="changed" handler="on_install_os_type_changed" swapped="no"/>
                                         <child internal-child="accessible">
                                           <object class="AtkObject" id="install-os-type-atkobject">
-                                            <property name="AtkObject::accessible-name" translatable="yes">install-os-type</property>
+                                            <property name="AtkObject::accessible-name">install-os-type</property>
                                           </object>
                                         </child>
                                       </object>
@@ -1822,14 +1822,14 @@ is not yet supported.&lt;/small&gt;</property>
                                             <property name="can_focus">True</property>
                                             <child internal-child="accessible">
                                               <object class="AtkObject" id="install-os-version-entry-atkobject">
-                                                <property name="AtkObject::accessible-name" translatable="yes">install-os-version-entry</property>
+                                                <property name="AtkObject::accessible-name">install-os-version-entry</property>
                                               </object>
                                             </child>
                                           </object>
                                         </child>
                                         <child internal-child="accessible">
                                           <object class="AtkObject" id="install-os-version-atkobject">
-                                            <property name="AtkObject::accessible-name" translatable="yes">install-os-version</property>
+                                            <property name="AtkObject::accessible-name">install-os-version</property>
                                           </object>
                                         </child>
                                       </object>
