--- a/ui/createnet.ui
+++ b/ui/createnet.ui
@@ -156,7 +156,7 @@
                                 <signal name="activate" handler="on_net_name_activate" swapped="no"/>
                                 <child internal-child="accessible">
                                   <object class="AtkObject" id="net-name-atkobject">
-                                    <property name="AtkObject::accessible-name" translatable="yes">Net Name Field</property>
+                                    <property name="AtkObject::accessible-name">Net Name Field</property>
                                   </object>
                                 </child>
                               </object>
@@ -1220,7 +1220,7 @@
                                             <property name="can_focus">False</property>
                                             <child internal-child="accessible">
                                               <object class="AtkObject" id="net-forward-atkobject">
-                                                <property name="AtkObject::accessible-name" translatable="yes">Physical Network</property>
+                                                <property name="AtkObject::accessible-name">Physical Network</property>
                                               </object>
                                             </child>
                                           </object>
