--- a/ui/details.ui
+++ b/ui/details.ui
@@ -619,14 +619,14 @@
                             </child>
                             <child internal-child="accessible">
                               <object class="AtkObject" id="hw-list-atkobject">
-                                <property name="AtkObject::accessible-name" translatable="yes">hw-list</property>
+                                <property name="AtkObject::accessible-name">hw-list</property>
                               </object>
                             </child>
                           </object>
                         </child>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="scrolledwindow5-atkobject">
-                            <property name="AtkObject::accessible-name" translatable="yes">hw-list-scroll</property>
+                            <property name="AtkObject::accessible-name">hw-list-scroll</property>
                           </object>
                         </child>
                       </object>
@@ -647,7 +647,7 @@
                         <signal name="clicked" handler="on_add_hardware_button_clicked" swapped="no"/>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="add-hardware-button-atkobject">
-                            <property name="AtkObject::accessible-name" translatable="yes">add-hardware</property>
+                            <property name="AtkObject::accessible-name">add-hardware</property>
                           </object>
                         </child>
                       </object>
@@ -2072,7 +2072,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                 <signal name="changed" handler="on_cpu_vcpus_changed" swapped="no"/>
                                                 <child internal-child="accessible">
                                                   <object class="AtkObject" id="cpu-vcpus-atkobject">
-                                                    <property name="AtkObject::accessible-name" translatable="yes">Virtual CPU Select</property>
+                                                    <property name="AtkObject::accessible-name">Virtual CPU Select</property>
                                                   </object>
                                                 </child>
                                               </object>
@@ -2534,7 +2534,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                     <signal name="changed" handler="on_cpu_vcpupin_changed" swapped="no"/>
                                                     <child internal-child="accessible">
                                                       <object class="AtkObject" id="cpu-vcpupin-atkobject">
-                                                        <property name="AtkObject::accessible-name" translatable="yes">Virtual CPU Affinity Select</property>
+                                                        <property name="AtkObject::accessible-name">Virtual CPU Affinity Select</property>
                                                       </object>
                                                     </child>
                                                   </object>
@@ -2769,7 +2769,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                 <signal name="changed" handler="on_mem_memory_changed" swapped="no"/>
                                                 <child internal-child="accessible">
                                                   <object class="AtkObject" id="mem-memory-atkobject">
-                                                    <property name="AtkObject::accessible-name" translatable="yes">Memory Select</property>
+                                                    <property name="AtkObject::accessible-name">Memory Select</property>
                                                   </object>
                                                 </child>
                                               </object>
@@ -2818,7 +2818,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                 <signal name="changed" handler="on_mem_maxmem_changed" swapped="no"/>
                                                 <child internal-child="accessible">
                                                   <object class="AtkObject" id="mem-maxmem-atkobject">
-                                                    <property name="AtkObject::accessible-name" translatable="yes">Max Memory Select</property>
+                                                    <property name="AtkObject::accessible-name">Max Memory Select</property>
                                                   </object>
                                                 </child>
                                               </object>
@@ -5934,7 +5934,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                             <signal name="clicked" handler="on_config_remove_clicked" swapped="no"/>
                             <child internal-child="accessible">
                               <object class="AtkObject" id="config-remove-atkobject">
-                                <property name="AtkObject::accessible-name" translatable="yes">config-remove</property>
+                                <property name="AtkObject::accessible-name">config-remove</property>
                               </object>
                             </child>
                           </object>
@@ -5954,7 +5954,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                             <signal name="clicked" handler="on_config_cancel_clicked" swapped="no"/>
                             <child internal-child="accessible">
                               <object class="AtkObject" id="config-cancel-atkobject">
-                                <property name="AtkObject::accessible-name" translatable="yes">config-cancel</property>
+                                <property name="AtkObject::accessible-name">config-cancel</property>
                               </object>
                             </child>
                           </object>
@@ -5976,7 +5976,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                             <signal name="clicked" handler="on_config_apply_clicked" swapped="no"/>
                             <child internal-child="accessible">
                               <object class="AtkObject" id="config-apply-atkobject">
-                                <property name="AtkObject::accessible-name" translatable="yes">config-apply</property>
+                                <property name="AtkObject::accessible-name">config-apply</property>
                               </object>
                             </child>
                           </object>
