storagelist: Reset list position after deleting volume (bz 1279861)

--- a/ui/storagelist.ui
+++ b/ui/storagelist.ui
@@ -217,7 +217,7 @@
         <property name="border_width">3</property>
         <property name="position">200</property>
         <child>
-          <object class="GtkScrolledWindow" id="scrolledwindow6">
+          <object class="GtkScrolledWindow" id="pool-scroll">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="hscrollbar_policy">never</property>
@@ -525,7 +525,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkScrolledWindow" id="scrolledwindow5">
+                          <object class="GtkScrolledWindow" id="vol-scroll">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="shadow_type">in</property>
