--- a/ui/asyncjob.ui
+++ b/ui/asyncjob.ui
@@ -13,6 +13,7 @@
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="urgency_hint">True</property>
+    <property name="deletable">False</property>
     <signal name="delete-event" handler="on_async_job_delete_event" swapped="no"/>
     <child>
       <object class="GtkBox" id="vbox13">
