--- a/ui/details.ui
+++ b/ui/details.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.19.0 -->
+<!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.8"/>
   <object class="GtkAccelGroup" id="accelgroup1"/>
@@ -5841,6 +5841,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                     <property name="use_markup">True</property>
                     <property name="justify">center</property>
                     <property name="wrap">True</property>
+                    <property name="selectable">True</property>
                     <property name="width_chars">40</property>
                   </object>
                   <packing>
