--- a/ui/details.ui
+++ b/ui/details.ui
@@ -6046,19 +6046,28 @@ if you know what you are doing.&lt;/small&gt;</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkScrolledWindow" id="console-gfx-scroll">
+                  <object class="GtkOverlay" id="console-overlay">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
+                    <property name="can_focus">False</property>
                     <child>
-                      <object class="GtkViewport" id="console-gfx-viewport">
+                      <object class="GtkScrolledWindow" id="console-gfx-scroll">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="resize_mode">queue</property>
-                        <property name="shadow_type">none</property>
+                        <property name="can_focus">True</property>
                         <child>
-                          <placeholder/>
+                          <object class="GtkViewport" id="console-gfx-viewport">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="resize_mode">queue</property>
+                            <property name="shadow_type">none</property>
+                            <child>
+                              <placeholder/>
+                            </child>
+                          </object>
                         </child>
                       </object>
+                      <packing>
+                        <property name="index">-1</property>
+                      </packing>
                     </child>
                   </object>
                   <packing>
