--- a/ui/details.ui
+++ b/ui/details.ui
@@ -5837,12 +5837,15 @@ if you know what you are doing.&lt;/small&gt;</property>
                   <object class="GtkLabel" id="console-unavailable">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="halign">center</property>
+                    <property name="valign">center</property>
                     <property name="label" translatable="yes">&lt;b&gt;The console is currently unavailable&lt;/b&gt;</property>
                     <property name="use_markup">True</property>
                     <property name="justify">center</property>
                     <property name="wrap">True</property>
                     <property name="selectable">True</property>
-                    <property name="width_chars">40</property>
+                    <property name="width_chars">60</property>
+                    <property name="max_width_chars">60</property>
                   </object>
                   <packing>
                     <property name="tab_expand">True</property>
